# small-os-simulator

./: CMakeLists.txt  README.md
phase1/: CMakeLists.txt  Makefile  phase1Int.h
phase1/phase1a/: Makefile  phase1a.c
phase1/phase1a/tests/: check_enbale.c  test_Hello_World.c  test_check_interrupt.c  test_check_mode.c  test_context_free.c  test_context_free_1.c  test_context_free_2.c  test_context_free_3.c  test_context_switch.c  test_context_switch_1.c  test_context_switch_2.c  test_context_switch_3.c  test_disable_interrupts.c  test_disable_interrupts_1.c  test_disable_interrupts_2.c  test_empty.c  test_free.c  test_free_stack.c  test_invaild_stack_size.c  test_invalid_stack.c  test_invalid_switch.c  test_many_context.c  test_one_context.c  test_phrase0.c  test_too_many_contexts.c  test_two_context.c  test_two_contexts.c
phase1/phase1b/: Makefile  phase1b.c
phase1/phase1b/tests/: test_dispatch.c  test_duplicate_name.c  test_fork.c  test_fork3.c  test_fork_2child.c  test_fork_no_qiut.c  test_fork_overflow.c  test_fork_quit.c  test_fork_quit2.c  test_fork_race.c  test_general.c  test_getChild_status.c  test_get_pid.c  test_get_proc_info.c  test_get_proc_info1.c  test_get_proc_info2.c  test_get_proc_info3.c  test_getpid.c  test_helloworld.c  test_info.c  test_interrupts.c  test_no_children.c  test_parameter.c  test_priority.c  test_priority1.c  test_set_state.c  test_set_state1.c  test_set_state2.c  test_set_state3.c  test_set_state4.c
phase1/phase1c/: phase1c.c
phase1/phase1c/tests/: test_P_forever.c  test_P_invalid_args.c  test_P_invalid_args1.c  test_P_invalid_args2.c  test_P_invalid_args3.c  test_V_higher_priority.c  test_V_invalid_args.c  test_V_invalid_args1.c  test_V_invalid_args2.c  test_V_invalid_args3.c  test_V_lower_priority.c  test_blocked.c  test_create_free.c  test_create_invalid_args.c  test_create_invalid_args1.c  test_create_invalid_args2.c  test_create_max.c  test_everything.c  test_free.c  test_free_invalid_args.c  test_free_invalid_args1.c  test_free_invalid_args2.c  test_free_invalid_args3.c  test_free_with_blocked.c  test_getname.c  test_many_process_and_many_semaphore.c  test_many_process_and_one_semaphore.c  test_many_semaphores1.c  test_many_semaphores2.c  test_many_semp.c  test_multiple_blocked.c  test_multiple_sems.c  test_nested.c  test_p_v.c  test_queue.c  test_races.c  test_semP.c  test_sem_name.c  test_sem_name1.c  test_v_invalid.c  (+2 more)
phase1/phase1d/: Makefile  phase1d.c
phase1/phase1d/tests/: test_completwait.c  test_device_clock.c  test_join.c  test_join_alot.c  test_mul.c  test_sem.c  test_startup.c  test_type_unit.c
phase2/: CMakeLists.txt  Makefile  phase2.h  phase2Int.h  subdir.mk  tester.h  versions.mk
phase2/p3/: p3stubs.c
phase2/phase2a/: phase2a.c
phase2/phase2a/tests/: test_1024.c  test_basic.c  test_coverage.c  test_handler.c  test_many_many_processes.c  test_maxProcess.c  test_nowait.c  test_parameter.c  test_sleep.c  test_sys.c  test_tenProcess.c
phase2/phase2b/: phase2b.c
phase2/phase2b/tests/: test_.c  test_MaxProcessAndSleepLonger.c  test_moresleep.c  test_nestedSleep.c  test_random2147444797.c  test_random69481.c  test_random9049.c  test_randoms.c  test_sleep.c  test_sleep_more.c  test_sleep_sleep.c  test_sleep_with_different_priorities.c  test_user_kernel.c
phase2/phase2c/: Makefile  phase2c.c
phase2/phase2c/tests/: test_BiggerDifferentContent.c  test_allsectors.c  test_diffcontentfull.c  test_freequeue.c  test_full.c  test_getSize1.c  test_getSize2.c  test_getSize3.c  test_getSize_noSysCall1.c  test_getSize_noSysCall2.c  test_getSize_noSysCall3.c  test_overtrackWithContent.c  test_parameter.c  test_queue.c  test_readPWriteP.c  test_sectorIsZeor.c  test_simple.c  test_simple2.c  test_trackOver.c  test_trackssectors.c  test_twodisk.c
phase2/phase2d/: phase2d.c
phase2/phase2d/tests/: test_1024.c  test_P_invalid_args_2d.c  test_V_Higher_Priority.c  test_V_Lower_Priority.c  test_V_invalid_args_2d.c  test_allsectors.c  test_basic.c  test_blocked.c  test_create_free.c  test_create_invalid_args.c  test_create_invalid_args1.c  test_create_invalid_args2.c  test_everything.c  test_free.c  test_free_invalid_args.c  test_free_invalid_args2.c  test_free_invalid_args3.c  test_free_with_blocked.c  test_getSize2.c  test_manySems1.c  test_manySems2.c  test_multiple_sems_2d.c  test_nestedSleep.c  test_nested_2d.c  test_overtrackWithContent.c  test_p_v_2d.c  test_random2147444797.c  test_random9049.c  test_sem.c  test_sem_name_2d.c  test_sleep_more.c  test_tenProcess.c  test_twodisk.c  test_v_p_2d.c  test_vvvppp_2d.c
phase3/: CMakeLists.txt  Makefile  phase3.h  phase3Int.h  subdir.mk  tester.h  versions.mk
phase3/phase3a/: phase3a.c
phase3/phase3a/p3/: p3stubs.c
phase3/phase3a/tests/: test_50Process_400pages.c  test_basic.c  test_basic127.c  test_basic400.c  test_basicSeperate.c  (+5 more)
phase3/phase3b/: Makefile  phase3b.c
phase3/phase3c/: phase3c.c
phase3/phase3d/: phase3d.c  test_generator.py
(+49 files in other folders)
